# django-simply-theme

./: .gitignore  setup.cfg
simply/theme/branding/: admin.py  apps.py  models.py
simply/theme/branding/migrations/: 0001_initial.py
simply/theme/middleware/: __init__.py
simply/theme/xdmin/: __init__.py  admin.py  apps.py  forms.py  models.py
simply/theme/xdmin/migrations/: 0001_initial.py
tests/branding/demo/: settings.py  urls.py
tests/demo/demo/: settings.py
tests/modules/: simply
tests/modules/cat/: admin.py  apps.py  models.py
tests/modules/cat/migrations/: 0001_initial.py
tests/modules/demo/: settings.py
tests/modules/dog/: admin.py  models.py
tests/modules/dog/migrations/: 0001_initial.py
