[metadata]
name = simply-theme-formatcom
version = 0.0.1
author = Vinicio Valbuena
author_email = vinicio.valbuena89@gmail.com
description = simply theme
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/formatcom/django-simply-theme
project_urls =
    Bug Tracker = https://github.com/formatcom/django-simply-theme/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
